<resources>
    <string name="app_name">SrDoutorAndroid</string>

    <string name="error_conexao_internet">Não foi detectado conexão com a internet, verifique a conexão e tente novamente.</string>
    <string name="error_conexao_servidor">Não foi possível se conectar ao servidor, verifique sua conexão e tente novamente.</string>
    <string name="error_acesso_negado">Você não tem acesso a este serviço!</string>
    <string name="error_servidor">Ocorreu um erro ao tentar acessar o servidor, tente novamente.</string>

    <string name="error_nenhum_registro">Nenhum registro encontrado.</string>

    <string name="error_nao_encontrado">Não foi possível estabelecer a requisição, tente novamente.</string>
    <string name="error_dados_duplicados">Dados já cadastrados.</string>
    <string name="error_dados_invalidos">Os valores informados são inválidos.</string>
    <string name="error_credenciais_invalidas">Credenciais inválidas</string>
    <string name="error_inesperado">Ocorreu o erro: </string>

    <string name="error_ler_mensagem">Erro ao informa leitura da mensagem</string>
    <string name="campo_obrigatorio">Campo obrigatório</string>

    <string name="facebook_app_id">170132490146220</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">4a055784ddc5bbc34ed57bef90e702c3</string>
    <string name="app_name_facebook">SrDoutor</string>

    <string name="segunda"><b>S</b></string>
    <string name="terca"><b>T</b></string>
    <string name="quarta"><b>Q</b></string>
    <string name="quinta"><b>Q</b></string>
    <string name="sexta"><b>S</b></string>
    <string name="sabado"><b>S</b></string>

    <string name="fb_login_protocol_scheme">fb170132490146220</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_notifications">Messages</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_friends</item>
        <item>@string/nav_item_notifications</item>
    </string-array>
    <string-array name="especialidadeArrays">
        <item>Selecione a Especialidade</item>
        <item>Gineco</item>
        <item>Fisio</item>
        <item>Terapeuta</item>
        <item>Geral</item>
    </string-array>
    <string name="lorem_ipsum_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>

    <string name="material_icon_like">&#xeb03;</string>
    <string name="material_icon_favorite">&#xe9b6;</string>
    <string name="material_icon_share">&#xeac0;</string>
    <string name="material_icon_star">&#xE8CF;</string>
    <string name="material_icon_star_border">&#xe83a;</string>
    <string name="material_icon_star_half">&#xe839;</string>
    <string name="cd_main_image">main image</string>
    <string name="fontello_heart_empty">&#xe80b;</string>

    <string name="action_settings">Configurações</string>
</resources>
