<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/list_row"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/list_selector"
	android:orientation="horizontal"
	android:padding="5dip"
	tools:ignore="UseCompoundDrawables" >

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:id="@+id/imagem_list">

		<ImageView
			android:layout_width="20dp"
			android:layout_height="20dp"
			android:layout_gravity="center"
			android:src="@drawable/coracao_verde_cheio"
			android:layout_marginLeft="3dp"
			android:layout_marginRight="3dp"/>

		<RelativeLayout android:id="@+id/thumbnail"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="3dip"
			android:background="@drawable/image_bg"
			android:layout_marginRight="5dip"
			android:layout_alignParentTop="true"
			android:layout_alignParentStart="true"
			android:adjustViewBounds="true">

			<br.com.srdoutorandroid.components.CircularImageView
				android:id="@+id/list_image"
				android:layout_width="50dp"
				android:layout_height="50dp"
				android:adjustViewBounds="true"
				android:src="@drawable/rihanna"
				android:elevation="-20dp"/>


		</RelativeLayout>
	</LinearLayout>
	<!--  ListRow Left sied Thumbnail image -->


	<!-- Title Of Song-->
	<TextView
		android:id="@+id/title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignTop="@+id/imagem_list"
		android:layout_toRightOf="@+id/imagem_list"
		android:text="Rihanna Love the way lie"
		android:typeface="sans"
		android:textSize="15dip"
		android:textStyle="bold"/>

	<!-- Artist Name -->
	<TextView
		android:id="@+id/artist"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/title"
		android:textSize="10dip"
		android:layout_marginTop="1dip"
		android:layout_toRightOf="@+id/imagem_list"
		android:text="Just gona stand there and ..." />

	<!-- Rightend Duration -->
	<TextView
		android:id="@+id/duration"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_alignTop="@id/title"
		android:gravity="right"
		android:text="5:45"
		android:layout_marginRight="5dip"
		android:textSize="10dip"
		android:textColor="#10bcc9"
		android:textStyle="bold"/>

	<!-- Rightend Arrow -->
	<LinearLayout
		android:id="@+id/stars"
		android:layout_width="90dp"
		android:layout_height="30dp"
		android:layout_centerInParent="true"
		android:gravity="center_horizontal"
		android:layout_gravity="center_horizontal"
		android:layout_alignParentRight="true"
		android:orientation="horizontal" >
		<ImageView
			android:id="@+id/imageViewTela1"
			android:layout_width="8dp"
			android:layout_height="8dp"
            android:layout_marginTop="15dp"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:src="@drawable/estrela_vazada"/>

		<ImageView
			android:id="@+id/imageViewTela2"
			android:layout_width="8dp"
			android:layout_height="8dp"
            android:layout_marginTop="15dp"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:src="@drawable/estrela_cheia" />

		<ImageView
			android:id="@+id/imageViewTela3"
			android:layout_width="8dp"
			android:layout_height="8dp"
            android:layout_marginTop="15dp"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:src="@drawable/estrela_cheia"/>
	</LinearLayout>
	<LinearLayout
		android:id="@+id/dias"
		android:layout_width="90dp"
		android:layout_height="20dp"
        android:gravity="center_horizontal"
		android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_below="@+id/stars"
        android:layout_toEndOf="@+id/imagem_list"
        android:elevation="5dp">
        <TextView
            android:id="@+id/segunda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/segunda"
            android:textSize="8sp"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/terca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/terca"
            android:textSize="8sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/quarta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/quarta"
            android:textSize="8sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/quinta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/quinta"
            android:textSize="8sp"
            android:textColor="@color/cor_navegacao_fundo_hover"/>

        <TextView
            android:id="@+id/sexta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/sexta"
            android:textSize="8sp"
            android:textColor="@color/colorPrimary"/>

        <TextView
            android:id="@+id/sabado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="10dp"
            android:text="@string/sabado"
            android:textSize="8sp"
            android:textColor="@color/cor_navegacao_fundo_hover"/>


    </LinearLayout>

</RelativeLayout>